--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,6 +1,8 @@
 <h1>Shopping List Page</h1>
 
+...
 <h5>Name: </h5>
-<p>Chelsea Angelica</p> <!-- Ubahlah sesuai dengan nama kamu -->
+<p>{{ name }}<p>
 <h5>Class: </h5>
-<p>PBP D</p> <!-- Ubahlah sesuai dengan kelas kamu -->
+<p>{{ class }}<p>
+...
